--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
     <section class="height__banner">
         <div class="banner">
-            <div class="logo-hero">
+            <!-- <div class="logo-hero">
                 <img src="img/logo-sfondo.png" alt="Grúas Medrano Elevamos tus proyectos - Logotipo">
-            </div>
+            </div> -->
         </div>
         <div class="banner-cotizacion">
             <a href="https://api.whatsapp.com/send?phone=+523313118541&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20servicios%20de%20gr%C3%BAas%20por%20favor." target="_blank"><i class="fab fa-whatsapp"></i> Solicita la cotización para tu proyecto</a>
